# studentsClub

./: .gitignore  README.md  docker-compose.yml
backend/: .env.example  .gitignore  README.md  alembic.ini  pyproject.toml
backend/app/: main.py
backend/app/ai/: base.py  budget.py  cache.py  credentials.py  events.py  factory.py  limits.py  parsers.py  pricing.py  prompts.py  prompts_registry.py  redis_client.py  registry.py  telemetry.py
backend/app/ai/extraction/: __init__.py  config.py  unstructured_client.py
backend/app/ai/orchestrator/: __init__.py  graph.py  profile.py  publish_hook.py  schemas.py
backend/app/ai/providers/: anthropic_provider.py  mock_provider.py  openai_provider.py
backend/app/ai/rag/: __init__.py  contextualize.py  index.py  qa.py  (+2 more)
backend/app/api/: deps.py
backend/app/core/: config.py  database.py  exceptions.py  logging.py  security.py
backend/app/db/: seed_admin.py
backend/app/models/: __init__.py  ai_credential.py  ai_model.py  ai_prompt.py  ai_run.py  auth_tokens.py  chat.py  document_chunk.py  extraction_settings.py  generation_profile.py  question.py  question_embedding_meta.py  quiz.py  settings.py  subject.py  upload.py  user.py
backend/app/schemas/: admin.py  auth.py  chat.py  question_sets.py  quizzes.py  settings.py  subjects.py  uploads.py  users.py
backend/app/services/: auth_service.py  notifications_service.py  profile_service.py  question_sets_service.py  quizzes_service.py  stats_service.py  storage_service.py  subjects_service.py  uploads_service.py
backend/app/utils/: pagination.py
backend/app/workers/: celery_app.py
backend/docker/: Dockerfile
backend/scripts/: seed_subjects.py  start_api.sh  start_beat.sh  start_worker.sh
backend/tests/: conftest.py  test_auth.py  test_parsers.py  test_question_sets.py  test_quizzes.py  test_subjects.py  test_uploads.py
(+184 files in other folders)
