[project]
name = "studentsclub-backend"
version = "0.1.0"
description = "StudentsClub backend API"
requires-python = ">=3.12"

dependencies = [
    # Web framework
    "fastapi==0.118.0",
    "uvicorn[standard]==0.34.0",
    "gunicorn==23.0.0",
    "python-multipart==0.0.20",

    # Validation / settings
    "pydantic==2.10.4",
    "pydantic-settings==2.7.0",
    "email-validator==2.2.0",

    # Database
    "sqlalchemy[asyncio]==2.0.36",
    "asyncpg==0.30.0",
    "alembic==1.14.0",

    # Auth
    "passlib[bcrypt]==1.7.4",
    "pyjwt[crypto]==2.10.1",

    # Background jobs
    "celery[redis]==5.4.0",
    "redis==5.2.1",

    # Object storage
    "boto3==1.35.90",

    # File parsing
    "pypdf==5.1.0",
    "pdfplumber==0.11.4",
    "python-docx==1.1.2",
    "pytesseract==0.3.13",
    "Pillow==11.0.0",

    # AI providers
    "anthropic==0.42.0",
    "openai==1.59.3",

    # Logging / observability
    "structlog==24.4.0",

    # HTTP client (for tests + provider calls)
    "httpx==0.28.1",
]

[dependency-groups]
dev = [
    "pytest==8.3.4",
    "pytest-asyncio==0.25.0",
    "pytest-cov==6.0.0",
    "factory-boy==3.3.1",
    "faker==33.1.0",
    "ruff==0.8.4",
    "mypy==1.13.0",
    "types-passlib==1.7.7.20241221",
    "pre-commit==4.0.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM", "TCH"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "-ra --cov=app --cov-report=term-missing"
testpaths = ["tests"]
